# ChangeLog for x11-libs/qt-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.58 2009/08/11 23:09:12 wired Exp $

  11 Aug 2009; Alex Alexander <wired@gentoo.org> qt-core-4.5.2.ebuild:
  added setqtenv in src_install, thanks to Tommy

  30 Jun 2009; Raúl Porcel <armin76@gentoo.org> qt-core-4.5.1.ebuild:
  ia64/sparc stable wrt #266201

*qt-core-4.5.2 (27 Jun 2009)

  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> +files/qt-4.5-nolibx11.diff,
  +qt-core-4.5.2.ebuild:
  Version bump

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.5.1.ebuild:
  Stable for HPPA (bug #266201).

  06 Jun 2009; Markus Meier <maekke@gentoo.org> qt-core-4.5.1.ebuild:
  amd64 stable, bug #266201

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org> qt-core-4.5.1.ebuild:
  stable x86, bug 266201

  29 May 2009; Markos Chandras <hwoarang@gentoo.org> qt-core-4.5.1.ebuild:
  Apply patch correctly

  28 May 2009; Robert Piasek <dagger@gentoo.org> qt-core-4.5.1.ebuild:
  stable on arm (bug #266201)

  26 May 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  qt-core-4.5.1.ebuild, +files/qt-core-4.5-boilerplate.diff:
  Apply ia64 patch, thanks to armin76

  15 May 2009; Tobias Klausmann <klausman@gentoo.org> qt-core-4.5.1.ebuild:
  Stable on alpha, bug #266201

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-core-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> qt-core-4.5.1.ebuild:
  Marking qt-core-4.5.1 ppc stable for bug 266201

  01 May 2009; Markos Chandras <hwoarang@gentoo.org> qt-core-4.5.0,
  qt-core-4.5.1:
  Adding x11-libs/libXext as dependency. Thanks to Christian Ruppert
  <idl0r@gentoo.org> for reporting.

  30 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qt-core-4.5.0,
  qt-core-4.5.1:
  Adding x11-libs/libX11 as dependency. Fixes bug #267967

  28 Apr 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.4.2-r2.ebuild:
  Stable for HPPA (bug #263945).
