@@ -9,13 +9,16 @@ AUX uic.pro 3671 RMD160 b6d3c392a67b66f6996134975e99db03a9987baf SHA1 f87fff3725
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
 DIST qt-mac-opensource-src-4.5.1.tar.bz2 112558395 RMD160 eaab3d822c5a752c800e4b654cf45ef0b4b18f81 SHA1 c658aa96b715b5242d415d8b05eb81968dfaea67 SHA256 5bdfe81e0955614827550a19856c5e97af7586e06474a602ae66640fad000116
 DIST qt-mac-opensource-src-4.5.2.tar.bz2 113874121 RMD160 245efc87416788f37b4b660153a53848308d822f SHA1 da62223757a8c61c8f0e895631bb6ff06beae229 SHA256 ca990057b54f43abe0647bbd1cc7f25945e97c86caee46310d2c3be95aa7dd53
+DIST qt-mac-opensource-src-4.5.3.tar.gz 123311631 RMD160 290fecbe8698ead4f884617ae4dd20b37663545e SHA1 566a9c45b261447c07c784b9317c9b5aae1ccbd8 SHA256 1bca03b2355e686ae7184d98c4da1d60689732754407886cefff4288b28c6f34
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
 DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
 DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
+DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
 EBUILD qt-core-4.4.2-r2.ebuild 5495 RMD160 24ae35b126928756b1f6b077fea9c54ea21ae1cd SHA1 d10a161417815b98b6be8aecefa5b0cce5dd1d98 SHA256 deed17127252bd3691a918708a91cbdd95950647be9d27c998c77e1ad75b81d5
 EBUILD qt-core-4.4.2.ebuild 5226 RMD160 95b62e8f97130b8a699694cbe34db57fde2badf5 SHA1 4d69d7d77440e8515e8ed7abeb3fa8612bc971b4 SHA256 0c5694a757524bf5a6197190f0e190e02bb73f6ae7dbe66ac6fab4e9acc119ef
 EBUILD qt-core-4.5.1.ebuild 6197 RMD160 dc8ec91934d3f034379e25bb642775022aaf54bf SHA1 848fdfbd75a5e8a242b6910f2063871c4ac646e0 SHA256 02e0881d0a8243546b697e32c25e9f84d1e7b9a9e5c0a2188331de0d8db1817b
 EBUILD qt-core-4.5.2.ebuild 6090 RMD160 a7baecb43e452e52194451ad5e7c835c52454880 SHA1 c4e926314c36fee44f8015736b2c2f0ba47f4244 SHA256 e6b84006219eb96fcd77fbc5384b8bc6eb100d3769529cfd69676941eb90213d
-MISC ChangeLog 7742 RMD160 26d3a7e32bdf752fcde31790b5a9de62eaad62f6 SHA1 3056b555651c00295692140a4eb16f9b0c2cdaa1 SHA256 b26867b4cf22f05791aa0c6ef57f9a58502d02f038a16bef6f950466074fd8d0
+EBUILD qt-core-4.5.3-r1.ebuild 6326 RMD160 d5fb71a4941a564e89544175ae27c2455ae78a72 SHA1 08699cacc817b17451b54e2b9e9150dcd6c5b33b SHA256 3f7c65688b47650a2d116e76507e4ee328f15b623dc4d5b512be9e94402c5e25
+MISC ChangeLog 7866 RMD160 f44922d1b2589eea02694d5f84ae73501188a16f SHA1 420a7a25793f5ab5a291520e22185b040ce94eb9 SHA256 b3e3380d28e9fa77dda46498837d30720e996d62e11793bae7d2d2b661b08de7
 MISC metadata.xml 405 RMD160 7ad4cec9a392e8164062dae2935e2c59ba52b503 SHA1 104a2a88f1cf174e9e4827b639a73d79bd0fba2d SHA256 cce5d387ade0a1412bf70c58c7b0ab28fd488cc60e458ac66296ee632d893bf8
